# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.162 2005/05/03 02:02:28 agaffney Exp $

*GLI-0.1_alpha (4 Apr 2005)

  2 May 2005; Andrew Gaffney <agaffney@gentoo.org>
  Exceptions received in CC are logged before being passed to the FE.

  1 May 2005; Andrew Gaffney <agaffney@gentoo.org>
  get_max_mb_for_resize() returns -1 if not self.resizeable

  30 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  More dirty rsync hacks :-/

  29 Apr 2005; Preston Cody <codeman@gentoo.org>
  Patches from chotchki (bug #90325) to improve CC networking.  untested.
  
  29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Proxies patch from chotchki (bug #90147). Fixed == instead of = typos in
  GLIStorageDevice (pointed out by chotchki). Fixed missing int()s. Split
  'custom' sync option into 'none' and 'snapshot'. Minor fixes to
  GLIStorageDevice as suggested by pychecker. Fix minor bug in
  _get_packages_to_emerge(). Fix _quickpkg_deps() to call
  _get_packages_to_emerge()

  28 Apr 2005; Preston Cody <codeman@gentoo.org>
  Added group-adding code to set_users in ArchTemplate

  27 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added post-install script code

  23 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed encapsulation issues in GLIClientController (bug #90141)

  22 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Update resizing code in GLIStorageDevice

  17 Apr 2005; Preston Cody <codeman@gentoo.org>
  Update AUTHORS, NEWS, TODO.  Added documentation to GLILogger.

  17 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Reverted change to ArchTemplate and added support for commented line in old
  code.

  16 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed _edit_config() to modify value in-place instead of commenting out and
  adding the new value to the end of the file.

  15 Apr 2005; Preston Cody <codeman@gentoo.org>