@@ -1,7 +1,7 @@
 """
 Gentoo Linux Installer
 
-$Id: GLIClientController.py,v 1.54 2005/05/03 02:02:29 agaffney Exp $
+$Id: GLIClientController.py,v 1.55 2005/05/03 02:17:46 agaffney Exp $
 Copyright 2004 Gentoo Technologies Inc.
 
 Steps (based on the ClientConfiguration):
@@ -149,6 +149,11 @@ class GLIClientController(Thread):
 						self.addNotification("int", INSTALL_DONE)
 				except GLIException, error:
 					self._logger.log("Exception received during '" + self._install_steps[self._install_step][1] + "': " + error)
+					self.addNotification("exception", error)
+					self._install_event.clear()
+				except Exception, error:
+					# Something very bad happened
+					self._logger.log("This is a bad thing. An exception occured outside of the normal install errors. The error was: '" + error + "'")
 					self.addNotification("exception", error)
 					self._install_event.clear()
 			else:
