@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.162 2005/05/03 02:02:28 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.163 2005/05/03 02:17:46 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
 
   2 May 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Exceptions received in CC are logged before being passed to the FE.
+  Exceptions received in CC are logged before being passed to the FE. Added
+  code to CC to handle exceptions *not* thrown by the installer itself.
 
   1 May 2005; Andrew Gaffney <agaffney@gentoo.org>
   get_max_mb_for_resize() returns -1 if not self.resizeable
